--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <servlet>
-        <servlet-name>Login</servlet-name>
+        <servlet-name>LoginCheck</servlet-name>
         <servlet-class>LoginCheck</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Login</servlet-name>
+        <servlet-name>LoginCheck</servlet-name>
         <url-pattern>/login.do</url-pattern>
     </servlet-mapping>
 </web-app>
