--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,5 +22,13 @@
         <url-pattern>/register.do</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Upload</servlet-name>
+        <servlet-class>Upload</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Upload</servlet-name>
+        <url-pattern>/upload.do</url-pattern>
+    </servlet-mapping>
 
 </web-app>
