把视频的存储路径改为了/web/video。 play页面可以播放视频了，不过功能还是很匮乏。 修改了视频入库存储的filePath
问题：
投稿之后，play页面无法播放刚投稿的视频.tomcat进行update resources以后，相同的url就可以播放新投稿的视频了。暂时没法解决……

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -31,4 +31,13 @@
         <url-pattern>/upload.do</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Play</servlet-name>
+        <servlet-class>Play</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Play</servlet-name>
+        <url-pattern>/play</url-pattern>
+    </servlet-mapping>
+
 </web-app>
