--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -40,4 +40,22 @@
         <url-pattern>/play</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Space</servlet-name>
+        <servlet-class>Space</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Space</servlet-name>
+        <url-pattern>/space</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Index</servlet-name>
+        <servlet-class>Index</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Index</servlet-name>
+        <url-pattern>/index</url-pattern>
+    </servlet-mapping>
+
 </web-app>
