添加了视频播放页面的收藏功能。接下来准备实现个人空间页面的收藏夹展示功能。

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -58,4 +58,13 @@
         <url-pattern>/index</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Collect</servlet-name>
+        <servlet-class>Collect</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Collect</servlet-name>
+        <url-pattern>/collect</url-pattern>
+    </servlet-mapping>
+
 </web-app>
