在index页面添加了注销功能 完成了登录界面的美化

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -67,4 +67,13 @@
         <url-pattern>/collect</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>LogOut</servlet-name>
+        <servlet-class>LogOut</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogOut</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
 </web-app>
